# aig-gen

./: .gitignore  README.md  baselines.md  evaluate_aigs.py  find.sh  gen_run.sh  graph_df_train.sh  main.py  run_af.sh  run_df.sh  run_ebm.sh  run_train.sh  sample_graph_af.py  sample_graphs.py  train.sh  train_graphdf.py  train_graphs.py
CondGraphDF/: __init__.py  aig_dataset.py  graphdf.py  train.py
ConditionalGraphDF/: AIGdataset.py  __init__.py
DAGformer/: requirements.txt
DeFoG/: defog.sh  try-defog.sh
DiGress/: data_notes.txt  digress.sh  run.sh  setup.py  try-digress.sh
G2PT/: .gitignore  beam_search_sample.py  check_aig_to_seq_conv.py  check_graphs_and_eval_functions.py  check_seq_length.py  configurator.py  constrained_beam.py  datasets_utils.py  eval_all.sh  eval_all_6.sh  evaluate_aigs.py  model.py  new_sample.py  run.sh  s_all.sh  s_all_aug6.sh  s_e.sh  sample.py  thorough_eval.py  train.py  visualize.py
GraphAF/: graphaf.py
GraphDF/: AigDataset.py  __init__.py  graphdf.py
GraphEBM/: __init__.py  energy_func.py  graphebm.py
LayerDAG/: layer_env.sh  layerdag.sh  pyproject.toml  sample_eval.py  setup_utils.py  train.py
LayerDAG/configs/LayerDAG/: aig.yaml
LayerDAG/src/: aig_config.py
LayerDAG/src/dataset/: __init__.py  aig_dataset.py  general.py  layer_dag.py
LayerDAG/src/model/: diffusion.py  layer_dag.py
OLD-DiGress/: run.sh
aig/: data_meta.json
current/: aig_dataset.py  masking.py  model.py  train.py
data/: aig_config.py  aig_dataset.py  all_aigs_file_ind.pkl  check_data.py  data-notes.txt  data.md  digress_data_processing.py  get_data.sh  get_edge_unroll.py  get_networkx_from_aig.py  get_pyg_from_pkl.py  make_data.py  make_data2.py  make_raw_data.py  txt_make_data.py
ggraph/: __init__.py  af_run.sh  aig_config.py  data-notes.txt  dataset.py  ebm.sh  generator.py  (+7 more)
(+243 files in other folders)
